--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "knex migrate:latest && knex seed:run"
   },
   "author": "nimesha",
   "license": "ISC",
