--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "postinstall": "knex migrate:rollback && knex migrate:latest && knex seed:run"
+    "postinstall": "knex migrate:rollback && knex migrate:latest"
   },
   "author": "nimesha",
   "license": "ISC",
